changes related to deployment

--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,5 @@
-MONGO_URI=mongodb://127.0.0.1:27017/admission
+MONGO_URI=mongodb+srv://Vasavi:Vasavi1016@cluster0.w1leeln.mongodb.net/admission_app?appName=Cluster0
 PORT=5001
 JWT_SECRET=supersecretkey
 AUTO_SEED=true
 
-# EMAIL_HOST=
-# EMAIL_PORT=
-# EMAIL_USER=
-# EMAIL_PASS=
